--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -37,134 +37,70 @@
          <div class="sc"><a>BEST OF 3</a></div>
       </div>
 
-      <div class="orange">
-         <img id="LogoA" class="LogoO" src="/assets/temp.png">
-         <div class="stats">
-            <div class="title">
-               <div class="contain">
-                  <div class="teamO">
-                     <a>NOTHINGTOLOSE</a>
-                  </div>
-                  <a>PTS</a>
-                  <a>ASS</a>
-                  <a>SAV</a>
-                  <a>STN</a>
-                  <a>POS</a>
-                  <a>ATT</a>
-               </div>
-            </div>
-            <div id="playersOrange">
-               <div class="rowO">
-                  <div class="name">moozor</div>
-                  <div class="data">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
+      <div class="cont">
+         <div class="orange">
+            <img id="LogoA" class="LogoO hide">
+            <div class="stats">
+               <div class="title">
+                  <div class="contain">
+                     <div class="teamO">
+                        <a id="nameA">NOTHINGTOLOSE</a>
+                     </div>
+                     <a>PTS</a>
+                     <a>ASS</a>
+                     <a>SAV</a>
+                     <a>STN</a>
+                     <a>POS</a>
+                     <a>ATT</a>
                   </div>
                </div>
-               <div class="rowO">
-                  <div class="name">moozor</div>
-                  <div class="data">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-               </div>
-               <div class="rowO">
-                  <div class="name">moozor</div>
-                  <div class="data">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-               </div>
-               <div class="rowO">
-                  <div class="name">moozor</div>
-                  <div class="data">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
+               <div id="playersOrange">
+                  <div class="rowO">
+                     <div class="name">moozor</div>
+                     <div class="data">
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                     </div>
                   </div>
                </div>
             </div>
          </div>
-      </div>
-
-      <div class="blue">
-         <div class="stats">
-            <div class="title">
-               <div class="contain b">
-                  <a>PTS</a>
-                  <a>ASS</a>
-                  <a>SAV</a>
-                  <a>STN</a>
-                  <a>POS</a>
-                  <a>ATT</a>
-                  <div class="teamB">
-                     <a>NOTHINGTOLOSE</a>
+   
+         <div class="blue">
+            <div class="stats">
+               <div class="title">
+                  <div class="contain b">
+                     <a>PTS</a>
+                     <a>ASS</a>
+                     <a>SAV</a>
+                     <a>STN</a>
+                     <a>POS</a>
+                     <a>ATT</a>
+                     <div class="teamB">
+                        <a id="nameB">NOTHINGTOLOSE</a>
+                     </div>
+                  </div>
+               </div>
+               <div id="playersBlue">
+                  <div class="rowB">
+                     <div class="data datab">
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                        <div class="dat"><a>5</a></div>
+                     </div>
+                     <div class="name">moozor</div>
                   </div>
                </div>
             </div>
-            <div id="playersBlue">
-               <div class="rowB">
-                  <div class="data datab">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-                  <div class="name">moozor</div>
-               </div>
-               <div class="rowB">
-                  <div class="data datab">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-                  <div class="name">moozor</div>
-               </div>
-               <div class="rowB">
-                  <div class="data datab">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-                  <div class="name">moozor</div>
-               </div>
-               <div class="rowB">
-                  <div class="data datab">
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                     <div class="dat"><a>5</a></div>
-                  </div>
-                  <div class="name">moozor</div>
-               </div>
-            </div>
+            <img id="LogoB" class="LogoB hide">
          </div>
-         <img id="LogoB" class="LogoB" src="/assets/temp.png">
       </div>
    </body>
 </html>
