--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-      <title>Wait</title>
+      <title>betwenRound</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/betwenRound/renderer.js"></script>
