--- a/public/halfTime/index.html
+++ b/public/halfTime/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="/halfTime/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
-   <body id="comp">
+   <body id="comp" class="hide">
       <div class="img">
          <div class="orange">
             <img class="logoHalf" src="/assets/half orange.png">
