overlay-ready fix 1/2 (c tout pt)

--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="rightTop">
          <img src="/assets/echo2.png" class="echo"/>
-         <h1>VRML SEASON 5</h1>
+         <h1 id="season"></h1>
       </div>
 
       <div class="scores">
