mixed + scrim fix

--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -44,7 +44,7 @@
                <div class="title">
                   <div class="contain">
                      <div class="teamO">
-                        <a id="nameA">NOTHINGTOLOSE</a>
+                        <a id="nameA"></a>
                      </div>
                      <a>PTS</a>
                      <a>ASS</a>
@@ -71,7 +71,7 @@
                      <a>POS</a>
                      <a>ATT</a>
                      <div class="teamB">
-                        <a id="nameB">NOTHINGTOLOSE</a>
+                        <a id="nameB"></a>
                      </div>
                   </div>
                </div>
