--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -25,14 +25,14 @@
       <div class="scores">
          <div class="sc"><a>SCORES</a></div>
          <div class="top">
-            <div class="RoundB winB"><a>14</a></div>
-            <div class="RoundB looseB"><a>14</a></div>
-            <div class="RoundB"><a>R3</a></div>
+            <div id="R1B" class="RoundB"><a id="R1B_SCORE">R1</a></div>
+            <div id="R2B" class="RoundB"><a id="R2B_SCORE">R2</a></div>
+            <div id="R3B" class="RoundB"><a id="R3B_SCORE">R3</a></div>
          </div>
          <div class="bottom">
-            <div class="RoundO looseO"><a>14</a></div>
-            <div class="RoundO winO"><a>14</a></div>
-            <div class="RoundO"><a>R3</a></div>
+            <div id="R1O" class="RoundO "><a id="R1O_SCORE">R1</a></div>
+            <div id="R2O" class="RoundO "><a id="R2O_SCORE">R2</a></div>
+            <div id="R3O" class="RoundO"><a id="R3O_SCORE">R3</a></div>
          </div>
          <div class="sc"><a>BEST OF 3</a></div>
       </div>
