mixed + vrml 100% + custom team input

--- a/ui/index.html
+++ b/ui/index.html
@@ -107,6 +107,22 @@
 
         </article>
       </article>
+
+      <article>
+        <h2>Mixed Mode</h2>
+        <article class="block">
+          <label for="teams">Custom Name Blue team</label>
+          <div class="inline">
+            <input type="text" class="txt" id="customBlueName" value="BLUE" />
+          </div>
+
+          <label for="teams">Custom Name Orange team</label>
+          <div class="inline">
+            <input type="text" class="txt" id="customOrangeName" value="ORANGE" />
+          </div>
+
+        </article>
+      </article>
     </section>
     
     <section class="hidden" id="autostream-wrapper">
