obs start (don't work)

--- a/ui/index.html
+++ b/ui/index.html
@@ -67,7 +67,7 @@
             <input type="checkbox" id="obs-buffer-autolaunch" /><a>Auto-start</a>
           </div>
           <div class="inline">
-            <button id="obs-start-buffer">Start</button>
+            <button id="obs-start-buffer">Start replayBuffer</button>
           </div>
 
           <label for="obs-websocket-password">OBS path</label>
@@ -78,6 +78,9 @@
           <label for="obs-websocket-autoconnect">Auto-start OBS Software</label>
           <div class="inline no-bottom">
             <input type="checkbox" id="obs-software-auto" /><a>Enable</a>
+          </div>
+          <div class="inline">
+            <button id="obs-start">Start OBS</button>
           </div>
 
         </article>
