clean + obs scenes auto start

--- a/ui/index.html
+++ b/ui/index.html
@@ -68,7 +68,13 @@
           </div>
           <div class="inline">
             <button id="obs-start-buffer">Start replayBuffer</button>
+          </div> 
+
+          <label for="createScenes">Create OBS scenes and content</label>
+          <div class="inline">
+            <button id="createScenes">Create</button>
           </div>
+          
 
           <label for="obs-websocket-password">OBS path</label>
           <div class="inline">
