--- a/ui/index.html
+++ b/ui/index.html
@@ -34,10 +34,15 @@
           </div>
           <div>
             <label for="echo-arena-autoconnect">Auto-connect</label>
-            <div class="inline no-bottom">
+            <div class="inline">
               <input type="checkbox" id="echo-arena-autoconnect" />
               <a>Enable</a>
             </div>
+          </div>
+
+          <label for="echo-arena-session">Session ID</label>
+          <div class="inline no-bottom">
+            <input class="txt" type="text" id="echo-arena-session" readonly/>
           </div>
         </article>
       </article>
