--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -13,7 +13,7 @@
 
          <div class="top">
             <img src="/assets/echo2.png" class="echo"/>
-            <a class="title" id="week">VRML WEEK 10</a>
+            <a class="title" id="week">MIXED</a>
          </div>
 
          <div class="loading-box-container">
