--- a/ui/index.html
+++ b/ui/index.html
@@ -24,9 +24,8 @@
       <article>
         <h2>Echo VR</h2>
         <article class="block">
-          
           <div>
-            <label for="echo-arena-url">Quest IP</label>
+            <label for="echo-arena-url">Echo VR IP</label>
             <div class="inline">
               <input class="txt" type="text" id="echo-arena-url" />
               <button id="echo-arena-connect">Connect</button>
