--- a/public/roundStart/index.html
+++ b/public/roundStart/index.html
@@ -1,12 +1,23 @@
 <html>
    <head>
-      <title>Wait</title>
+      <title>Round start</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/roundStart/renderer.js"></script>
+      <link rel="stylesheet" href="/roundStart/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Round start
+      <div class="content">
+         <div class="mainDiv">
+            <div id="discDiv">
+               <img src="/assets/disc.svg" id="disc" class="disc">
+            </div>
+            <div id="roundDiv" class="closed">
+               <a id="round" class="hide">ROUND 1</a>
+            </div>
+         </div>
+      </div>
+
    </body>
 </html>
