--- a/public/roundStart/index.html
+++ b/public/roundStart/index.html
@@ -8,13 +8,16 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="content">
-         <div class="mainDiv">
-            <div id="discDiv">
-               <img src="/assets/disc.svg" id="disc" class="disc">
-            </div>
-            <div id="roundDiv" class="closed">
-               <a id="round" class="hide">ROUND 1</a>
+      <video id="background-video" autoplay loop muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
+      <div class="wrap">
+         <div class="content">
+            <div class="mainDiv">
+               <div id="discDiv">
+                  <img src="/assets/disc.svg" id="disc" class="disc">
+               </div>
+               <div id="roundDiv" class="closed">
+                  <a id="round" class="hide">ROUND 1</a>
+               </div>
             </div>
          </div>
       </div>
