--- a/public/roundStart/index.html
+++ b/public/roundStart/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <video id="background-video" autoplay loop muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
+      <video id="background-video" muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
       <div class="wrap">
          <div class="content">
             <div class="mainDiv">
@@ -16,7 +16,7 @@
                   <img src="/assets/disc.svg" id="disc" class="disc">
                </div>
                <div id="roundDiv" class="closed">
-                  <a id="round" class="hide">ROUND 1</a>
+                  <a id="round" class="hide"></a>
                </div>
             </div>
          </div>
