--- a/public/shot/index.html
+++ b/public/shot/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="/shot/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
-   <body id="comp">
+   <body id="comp" class="visuallyhidden hidden">
       <div id="gradient">
          <div class="replay-box">
             <p class="here">YOUR REPLAY HERE</p>
