--- a/public/roundWin/index.html
+++ b/public/roundWin/index.html
@@ -1,12 +1,26 @@
 <html>
    <head>
-      <title>Wait</title>
+      <title>Round Win</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
       <script src="http://localhost:4545/roundWin/renderer.js"></script>
+      <link rel="stylesheet" href="/roundWin/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      Round win
+      <video id="background-video" muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
+      <div class="wrap">
+         <div class="content">
+            <div class="mainDiv">
+               <div id="teamDiv">
+                  <img src="/assets/temp.png" id="img" class="team">
+               </div>
+               <div id="roundDiv" class="closed blue">
+                  <a id="teamName" class="hide"></a>
+               </div>
+            </div>
+         </div>
+      </div>
+
    </body>
 </html>
