half time stats

--- a/public/halfTime/index.html
+++ b/public/halfTime/index.html
@@ -13,10 +13,10 @@
             <img class="logoHalf" src="/assets/half orange.png">
             <div class="txt">
                <div class="player" id="player">
-                  <a class="name">notblue</a>
+                  <a class="name" id="nameOrange"></a>
                </div>
-               <div class="stat" id="data">
-                  <a class="d">28 stuns</a>
+               <div class="stat">
+                  <a class="d" id="dataOrange"></a>
                </div>
             </div>
          </div>
@@ -24,10 +24,10 @@
             <img class="logoHalf" src="/assets/half blue.png">
             <div class="txt b">
                <div class="player" id="player">
-                  <a class="name">notblue</a>
+                  <a class="name" id="nameBlue"></a>
                </div>
-               <div class="stat" id="data">
-                  <a class="d">28 stuns</a>
+               <div class="stat">
+                  <a class="d" id="dataBlue"></a>
                </div>
             </div>
          </div>
