--- a/public/overTime/index.html
+++ b/public/overTime/index.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <video id="background-video" autoplay loop muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
+      <video id="background-video" muted><source src="/assets/transition/background.mp4" type="video/mp4"></video>
       <div class="wrap">
          <div class="content">
             <div class="mainDiv">
