--- a/ui/index.html
+++ b/ui/index.html
@@ -57,7 +57,7 @@
       <article>
         <h2>SpectatorStream (Spark)</h2>
         <article class="block">
-          <label for="echo-path">EchoVR Executable path</label>
+          <label for="echo-path">EchoVR path</label>
           <div class="inline">
             <input type="text" class="txt" id="echo-path"/>
           </div>
@@ -65,9 +65,6 @@
           <label for="echo-spectateMe">Auto-start EchoVR spectator</label>
           <div class="inline no-bottom">
             <input type="checkbox" id="echo-spectateMe" /><a>Spectate me</a>
-          </div>
-          <div class="inline">
-            <button id="echo-start">Start EchoVR</button>
           </div>
 
           <h4>Settings</h4>
@@ -89,6 +86,11 @@
           <label for="muteTeams">Mute Teams</label>
           <div class="inline">
             <input type="checkbox" id="muteTeams" /><a>Enable</a>
+          </div>
+
+          <label for="anonymous">Anonymous</label>
+          <div class="inline">
+            <input type="checkbox" id="anonymous" /><a>Enable</a>
           </div>
 
           <label for="cameraMode">Camera Mode</label>
