--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -3,7 +3,7 @@
       <title>betwenRound</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/betwenRound/renderer.js"></script>
+      <script src="/betwenRound/renderer.js"></script>
       <link rel="stylesheet" href="/betwenRound/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
@@ -82,5 +82,7 @@
             <img id="LogoB" class="LogoB hide">
          </div>
       </div>
+
+      <div class="boxPow"><a class="powered">Powered by EAST</a></div>
    </body>
 </html>
