--- a/public/game/index.html
+++ b/public/game/index.html
@@ -3,7 +3,7 @@
       <title>Game</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/game/renderer.js"></script>
+      <script src="/game/renderer.js"></script>
       <link rel="stylesheet" href="/game/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
