--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -3,7 +3,7 @@
       <title>starting</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/starting/renderer.js"></script>
+      <script src="/starting/renderer.js"></script>
       <link rel="stylesheet" href="/starting/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
@@ -60,5 +60,6 @@
          </div>
 
       </div>
+      <div class="boxPow"><a class="powered">Powered by EAST</a></div>
    </body>
 </html>
