--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -3,12 +3,11 @@
       <title>wait</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="http://localhost:4545/wait/renderer.js"></script>
+      <script src="/wait/renderer.js"></script>
       <link rel="stylesheet" href="/style.css">
       <link rel="stylesheet" href="/wait/style.css">
    </head>
    <body>
-      
       <div class="background">
          <img src="/assets/disc.svg" class="logo"/>
          <div class="teams">
@@ -37,6 +36,6 @@
             <a id="timer"></a>
          </div>
       </div>
-
+      <div class="boxPow"><a class="powered">Powered by EAST</a></div>
    </body>
 </html>
