--- a/ui/index.html
+++ b/ui/index.html
@@ -242,9 +242,11 @@
               <h2>Betwen</h2>
               <article class="block">
                 <label for="betwen-scene[0]">Scene betwen round</label>
-                <div class="inline no-bottom">
+                <div class="inline">
                   <select id="betwen-scene[0]" class="scene-select txt" type="text"></select>
                 </div>
+                <label for="BetwenRoundDur">Duration</label>
+                <div class="inline no-bottom"><input id="BetwenRoundDur" class="txt" type="number" min="1"/></div>
               </article>
             </article>
             
