--- a/public/betwenRound/index.html
+++ b/public/betwenRound/index.html
@@ -1,10 +1,10 @@
 <html>
    <head>
-      <title>betwenRound</title>
+      <title>betweenRound</title>
       <meta http-equiv="content-type" content="text/html;charset=utf-8">
       <script src="https://cdn.socket.io/4.4.1/socket.io.js"></script>
-      <script src="/betwenRound/renderer.js"></script>
-      <link rel="stylesheet" href="/betwenRound/style.css">
+      <script src="/betweenRound/renderer.js"></script>
+      <link rel="stylesheet" href="/betweenRound/style.css">
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
