--- a/ui/index.html
+++ b/ui/index.html
@@ -155,6 +155,13 @@
                 <button id="obs-start">Start OBS</button>
               </div>
 
+              <label for="obs-websocket-password">Screen resolution for OBS sources (Width/Height)</label>
+              <div class="inline">
+                <input type="text" class="obs" id="obs-width" />
+                <input type="text" class="obs" id="obs-height"/>
+              </div>
+              
+
             </article>
           </article>
 
