--- a/ui/index.html
+++ b/ui/index.html
@@ -183,6 +183,12 @@
           <article>
             <h2>VRML Mode</h2>
             <article class="block">
+              <label for="region">Region</label>
+              <div class="inline">
+                <select id="region">
+                </select>
+              </div>
+              <div id="state" class="inline"></div>
               <label for="teams">Team</label>
               <div class="inline">
                 <select id="teams"></select>
