BestOf + round betwen duration sync to settings

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -21,7 +21,7 @@
                   <a id="ms" class="ms"></a>
                </div>
                <div class="bo3">
-                  <a>BO3</a>
+                  <a>BO<a id="bestOf">3</a></a>
                </div>
             </div>
 
@@ -31,14 +31,18 @@
          </div>
          <img id="logoB">
       </div>
+      
       <div id="OrangeR2" class="round tbdO"></div>
       <div id="OrangeR1" class="round tbdO"></div>
-      <div class="orange">
+
+      <div class="orange" id="orange">
          <div class="scoreA"><a id="scoreA"></a></div>
       </div>
+
       <div id="BlueR2" class="round tbdB"></div>
       <div id="BlueR1" class="round tbdB"></div>
-      <div class="blue">
+
+      <div class="blue" id="blue">
          <div class="scoreB"><a id="scoreB"></a></div>
       </div>
    </body>
