--- a/public/roundBoard/index.html
+++ b/public/roundBoard/index.html
@@ -8,19 +8,19 @@
       <link rel="stylesheet" href="/style.css">
    </head>
    <body>
-      <div class="scores">
+      <div id="scores" class="scores">
          <div class="sc"><a>SCORES</a></div>
-         <div class="top">
+         <div class="top" id="top">
             <div id="R1B" class="RoundB"><a id="R1B_SCORE">R1</a></div>
             <div id="R2B" class="RoundB"><a id="R2B_SCORE">R2</a></div>
             <div id="R3B" class="RoundB"><a id="R3B_SCORE">R3</a></div>
          </div>
-         <div class="bottom">
+         <div class="bottom" id="bottom">
             <div id="R1O" class="RoundO "><a id="R1O_SCORE">R1</a></div>
             <div id="R2O" class="RoundO "><a id="R2O_SCORE">R2</a></div>
             <div id="R3O" class="RoundO"><a id="R3O_SCORE">R3</a></div>
          </div>
-         <div class="sc"><a>BEST OF 3</a></div>
+         <div class="sc"><span>BEST OF <a id="bestOf">3</a></span></div>
       </div>
    </body>
 </html>
