--- a/public/wait/index.html
+++ b/public/wait/index.html
@@ -32,10 +32,10 @@
             <a id="week"></a>
             <a class="vs">VS</a>
             <a>Master Division</a>
-            <a>Best Of 3</a>
+            <span>Best Of <a id="bestOf">3</a></span>
             <a id="timer"></a>
          </div>
-      </div>
+      </div>m
       <div class="boxPow"><a class="powered">Powered by EAST</a></div>
    </body>
 </html>
