--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'"> -->
     <link href="style.css" rel="stylesheet">
-    <title>Echo Arena Overlay</title>
+    <title>Echo Arena Overlay v0.5</title>
   </head>
   <body id="body">
     <div class="box">
