--- a/public/starting/index.html
+++ b/public/starting/index.html
@@ -56,7 +56,7 @@
 
          <div class="bottom">
             <a>Master Division</a>
-            <a>Best Of 3</a>
+            <span>Best Of <a id="bestOf">3</a></span>
          </div>
 
       </div>
