reset front end

--- a/public/game/index.html
+++ b/public/game/index.html
@@ -36,14 +36,14 @@
       <div id="OrangeR1" class="round tbdO"></div>
 
       <div class="orange" id="orange">
-         <div class="scoreA"><a id="scoreA"></a></div>
+         <div class="scoreA"><a id="scoreA">0</a></div>
       </div>
 
       <div id="BlueR2" class="round tbdB"></div>
       <div id="BlueR1" class="round tbdB"></div>
 
       <div class="blue" id="blue">
-         <div class="scoreB"><a id="scoreB"></a></div>
+         <div class="scoreB"><a id="scoreB">0</a></div>
       </div>
    </body>
 </html>
