update teams button

--- a/ui/index.html
+++ b/ui/index.html
@@ -210,11 +210,16 @@
               <div class="inline">
                 <input type="text" class="txt" id="customBlueName" value="BLUE" />
               </div>
-
+ 
               <label for="teams">Custom Name Orange team</label>
               <div class="inline">
                 <input type="text" class="txt" id="customOrangeName" value="ORANGE" />
               </div>
+
+              <div class="inline">
+                <button id="updateTeams">Update Names</button>
+              </div>
+
 
             </article>
           </article>
