--- a/ui/index.html
+++ b/ui/index.html
@@ -204,7 +204,7 @@
           </article>
 
           <article>
-            <h2>Mixed Mode</h2>
+            <h2>Custom</h2>
             <article class="block">
               <label for="teams">Custom Name Blue team</label>
               <div class="inline">
@@ -223,12 +223,41 @@
 
             </article>
           </article>
+
+          <article>
+            <h2>Tournament Mode</h2>
+            <article class="block">
+              <label for="tournament-mode">Tournament Mode</label>
+              <div class="inline">
+                <input type="checkbox" id="tournament-mode" /><a>Enable</a>
+              </div>
+
+              <div class="inline">
+                <label for="tournament-mode">Number of games</label>
+              </div>
+              <a class="inline">first game in Arena 1, second in Arena 2, third start again at 1</a>
+              <div class="inline">
+                <input type="text" class="txt" id="tournament-games" value="3" />
+              </div>
+
+              <label for="session-id1">Arena 1</label>
+              <div class="inline">
+                <input type="text" class="txt" id="session-id1" value="sessionID" />
+                <button id="join-Session2">Join</button>
+              </div>
+              <label for="session-id2">Arena 2</label>
+              <div class="inline">
+                <input type="text" class="txt" id="session-id2" value="sessionID" />
+                <button id="join-Session1">Join</button>
+              </div>
+            </article>
+          </article>
         </section>
         
         <section class="hidden" id="autostream-wrapper">
             <article>
               <h2>Main</h2>
-			  <a>Start OBS before tweaking the settings</a>
+			        <a>Start OBS before tweaking the settings</a>
               <article class="block">
                 <label for="main-scene">In-game scene</label>
                 <div class="inline">
