front auto team

--- a/ui/index.html
+++ b/ui/index.html
@@ -250,6 +250,48 @@
                 <input type="text" class="txt" id="session-id2" value="sessionID" />
                 <button id="join-Session1">Join</button>
               </div>
+
+              <!-- make add a team with players to a team list -->
+              <label for="teamsTournament">Teams</label>
+              <div class="inline">
+                <select id="teamsTournament">
+                </select>
+              </div>
+              <label for="teamsTournament">Team name</label>
+              <div class="inline">
+                <input type="text" class="txt" id="team-name" value="Team Name" />
+              </div>
+              <!-- players -->
+              <label for="teamsTournament">Player Names</label>
+              <div id="playersTour">
+                <div class="inline">
+                  <input type="text" class="txt" id="playerTournament" value="Player Name" />
+                  <button id="removePlayer">-</button>
+                </div>
+                <div class="inline">
+                  <input type="text" class="txt" id="playerTournament" value="Player Name" />
+                  <button id="removePlayer">-</button>
+                </div>
+                <div class="inline">
+                  <input type="text" class="txt" id="playerTournament" value="Player Name" />
+                  <button id="removePlayer">-</button>
+                </div>
+                <div class="inline">
+                  <input type="text" class="txt" id="playerTournament" value="Player Name" />
+                  <button id="removePlayer">-</button>
+                </div>
+              </div>
+
+              <!-- make a button to add a player and another one to remote the team -->
+              <div class="inline">
+                <button id="addPlayer">+</button>
+              </div>
+              <label>Manage team</label>
+              <div class="inline">
+                <button id="addTeam">Create new team</button>
+                <button id="removeTeam">Remove team</button>
+              </div>
+
             </article>
           </article>
         </section>
